# report-traveltide-segmentation

./: .gitignore  README.md  pyproject.toml
data/: traveltide-user-aggregation.csv  traveltide-user_aggregation.csv
docs/: 02-cohort-definition.md
notebooks/: 01-sessions-eda.ipynb  02-users-aggregation.ipynb  03-customer-segmentation.ipynb  traveltide_01_sessions_eda.ipynb  traveltide_02_users_aggregation.ipynb  traveltide_03_customer_segmentation.ipynb
sql/: 01_schema_exploration.sql
